<resources>
    <string name="app_name">BorderOnlineProductionEdition</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera_show">CameraShow</string>
    <string name="title_activity_border">Border</string>
    <string name="title_activity_borders">Borders</string>




    <string name="find">Find</string>

    <string name="cars">Cars</string>
    <string name="trucks">Trucks</string>
    <string name="busses">Busses</string>
    <string name="favorite">Favorite</string>
    <string name="notFavorite">not favorite</string>
    <string name="usersInfo">Stat from users:</string>
    <string name="systemInfo">Stat from system</string>
    <string name="additionalInfo">Additional Info (Links)</string>


    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_transits">Transits</string>
    <string name="title_activity_transit_info">TransitInfo</string>
    <string name="title_activity_chat">Chat</string>

    <string-array name="screen_array">
        <item>Screen 1</item>
        <item>Screen 2</item>
        <item>Screen 3</item>
    </string-array>

    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>

    <string name="allBorders">All Borders</string>
    <string name="recent">Recent</string>
    <string name="tellAboutQueue">Tell about queue</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>


    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="notEnable">Is not enable now</string>
    <string name="noInternet">No internet connection</string>
    <string name="chooseDirection">Choose the direction</string>
    <string name="fromUsers">This data was getting from users</string>
    <string name="fromSite">This data was getting from site granitsa-online.com</string>
    <string name="nowhere">This data was getting nowhere :(</string>
    <string name="noData">No data</string>
</resources>
