<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout_transit_info"
        android:layout_width="match_parent"

        android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        xmlns:fab="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        tools:context="com.lilsmile.borderonlineproductionedition.app.TransitInfo">
            <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                <com.melnykov.fab.ObservableScrollView android:layout_width="fill_parent"
                                                       android:layout_height="fill_parent"
                                                       android:id="@+id/scrollViewTransitInfo">
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="fill_parent"
                                android:id="@+id/llInfoTransitInfo"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="New Text"
                                    android:id="@+id/textViewCityes"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:id="@+id/textViewTransitInfoCities"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:id="@+id/textViewTransitInfoTime"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:id="@+id/textViewTransitInfoQueue"/>
                        </LinearLayout>
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_below="@id/llInfoTransitInfo"
                                  android:text="@string/usersInfo"
                                  android:id="@+id/textViewTitleUsersTransitInfo"/>

                        <com.jjoe64.graphview.GraphView
                                android:layout_width="match_parent"
                                android:layout_height="200dip"
                                android:layout_below="@id/textViewTitleUsersTransitInfo"
                                android:id="@+id/graphViewUsers"/>

                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_below="@id/graphViewUsers"
                                  android:text="@string/systemInfo"
                                  android:id="@+id/textViewTitleSystemTransitInfo"/>

                        <com.jjoe64.graphview.GraphView
                                android:layout_width="match_parent"
                                android:layout_height="200dip"
                                android:layout_below="@id/textViewTitleSystemTransitInfo"
                                android:id="@+id/graphViewSystem"/>
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="fill_parent"
                                android:layout_below="@id/graphViewSystem"
                                android:layout_height="fill_parent">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/additionalInfo"
                                    android:id="@+id/textView" android:layout_gravity="center_horizontal"/>
                            <TableLayout
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent" android:id="@+id/tableLayoutAdditionalInfo">
                            </TableLayout>
                        </LinearLayout>
                    </RelativeLayout>

                </com.melnykov.fab.ObservableScrollView>
                <com.melnykov.fab.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_arrow_back_black_48dp"
                />
            </FrameLayout>
        </RelativeLayout>
    </FrameLayout>
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer_transit_info"
              android:layout_width="240dp"
              android:layout_height="match_parent"
              android:layout_gravity="start"
              android:choiceMode="singleChoice"
              android:divider="@android:color/transparent"
              android:dividerHeight="0dp"
              android:background="#fefefe"/>
</android.support.v4.widget.DrawerLayout>